--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "resolutions": {
+    "mem": "^4.0.0"
+  },
   "author": "Jake Stanger",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
     "handlebars": "^4.1.2",
     "lodash.startcase": "^4.4.0",
-    "showdown": "^1.9.0",
+    "showdown": "^1.9.1",
     "showdown-prettify": "^1.3.0"
   }
 }
